# orderbook

./: Cargo.toml  README.md
.github/workflows/: scheduled.yml
contracts/orderbook/: Cargo.toml  metadata.json
contracts/orderbook/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/orderbook/src/handlers/: execute.rs  ibc.rs  instantiate.rs  migrate.rs  mod.rs  query.rs  receive.rs
contracts/orderbook/src/handlers/execute/: limit.rs  market.rs
contracts/orderbook/src/replies/: instantiate.rs  mod.rs
contracts/orderbook/src/tests/: common.rs  integration.rs  mod.rs  order.rs
contracts/orderbook/tests/: integration.rs
contracts/orderbook_adapter/: Cargo.toml  metadata.json
contracts/orderbook_adapter/src/: api.rs  contract.rs  error.rs  lib.rs  msg.rs
contracts/orderbook_adapter/src/handlers/: execute.rs  instantiate.rs  query.rs
contracts/orderbook_adapter/tests/: integration.rs
contracts/orderbook_standalone/: Cargo.toml  metadata.json
contracts/orderbook_standalone/src/: contract.rs  error.rs  interface.rs  lib.rs  msg.rs
contracts/orderbook_standalone/tests/: integration.rs
tests/: Cargo.toml
tests/src/: integration.rs  lib.rs  order.rs
